gdkdisplay: Document get_monitor_at_surface can return NULL

Fixes https://gitlab.gnome.org/GNOME/gtk/-/issues/5075